# Sturdyengine-2.0

./: .gitignore  CMakeLists.txt  build.bat
Sturdyengine 2.0/: CMakeLists.txt  GetDependancies.ps1  Sturdyengine 2.0.h
Sturdyengine 2.0/Window/: GLFWWindow.h
Test Files/: main.cpp
